Final draft for 9 Feb

--- a/2025/2025-02-09.md
+++ b/2025/2025-02-09.md
@@ -28,17 +28,17 @@ Is it too early to start speculating about the '28 race?
 
 ### Week in Review: Feb. 2-8, 2025
 
-- **Elon Musk's efforts** to figuratively [bulldoze](https://www.nytimes.com/2025/02/03/us/politics/musk-federal-government.html) multiple federal agencies, [gain access](https://apnews.com/article/donald-trump-elon-musk-doge-treasury-5e26cc80fcb766981cea56afd57ae759) to troves of Americans' personal information, and re-hire [an openly racist data geek](https://www.bbc.com/news/articles/c93q625y04wo) who resigned during what appears to have been a fleeting bout of common sense dominated political coverage in America last week. These antics also invited formal challenges in [Congress and]() the [courts](). Yet Musk still had only the second-highest disapproval rating (49%) out of 18 public figures assessed in a new [Economist/YouGov poll](https://d3nkl3psvxxpe9.cloudfront.net/documents/econtoplines_c1AfT3R.pdf). Meta CEO Mark Zuckerberg fared even worse at 56% disapproval among poll respondents. 
+- **Elon Musk's efforts** to figuratively [bulldoze](https://www.nytimes.com/2025/02/03/us/politics/musk-federal-government.html) multiple federal agencies, [gain access](https://apnews.com/article/donald-trump-elon-musk-doge-treasury-5e26cc80fcb766981cea56afd57ae759) to troves of American citizens' personal information, and re-hire [an openly racist geek](https://www.bbc.com/news/articles/c93q625y04wo) who resigned during what appears to have been a fleeting bout of common sense dominated coverage of America's national politics last week. These antics also invited formal challenges in [Congress](https://www.oregonlive.com/politics/2025/02/new-oregon-member-of-congress-introduces-43-word-stop-musk-act-as-her-1st-bill.html) and [in court](https://www.npr.org/2025/02/08/g-s1-47350/states-sue-to-stop-doge-accessing-personal-data). Yet Musk still had only the second-highest disapproval rating (49%) out of 18 public figures assessed in a new [Economist/YouGov poll](https://d3nkl3psvxxpe9.cloudfront.net/documents/econtoplines_c1AfT3R.pdf). Meta CEO Mark Zuckerberg somehow fared even worse at 56% disapproval among poll respondents.
 
-- **Google updated its ethics guidelines for AI** to remove commitments not to apply such tech to weapons or surveillance. ([Washington Post](https://news.google.com/read/CBMijgFBVV95cUxPTTJsT0kza2tOM3lsb1paaGJzdkdpbGRXdFhlLThfZzFjcTNPaFVsNGRONXYtbi1yekp0VzlCckVUZHAwcTVDUEllTFM5d0Q3VGxwX3pfVGpRczFMVVRJa3ZUS2RKbUIxbWE5UWtuOXZFUjI5cVBEOUVRc0pXaDJxUF9HRGpnc3ZEMUNuN0VR?hl=en-US&gl=US&ceid=US%3Aen))
+- **Yikes.** Google updated its ethics guidelines for AI to remove commitments not to apply such tech to weapons or surveillance. ([Washington Post](https://news.google.com/read/CBMijgFBVV95cUxPTTJsT0kza2tOM3lsb1paaGJzdkdpbGRXdFhlLThfZzFjcTNPaFVsNGRONXYtbi1yekp0VzlCckVUZHAwcTVDUEllTFM5d0Q3VGxwX3pfVGpRczFMVVRJa3ZUS2RKbUIxbWE5UWtuOXZFUjI5cVBEOUVRc0pXaDJxUF9HRGpnc3ZEMUNuN0VR?hl=en-US&gl=US&ceid=US%3Aen))
 
-- **A head-scratching remark from OpenAI CEO Sam Altman:** In a recent [AMA session](https://www.reddit.com/r/OpenAI/comments/1ieonxv/ama_with_openais_sam_altman_mark_chen_kevin_weil/?rdt=56101) with Reddit users, Altman acknowledged that the recent launch of rival DeepSeek highlights how his company has been ["on the wrong side of history"]() when it comes to open sourcing its technologies.
+- **A head-scratching remark from OpenAI CEO Sam Altman:** In a recent [AMA session](https://www.reddit.com/r/OpenAI/comments/1ieonxv/ama_with_openais_sam_altman_mark_chen_kevin_weil/?rdt=56101) with Reddit users, Altman acknowledged that the recent launch of rival DeepSeek highlights how his company has been ["on the wrong side of history"](https://techcrunch.com/2025/01/31/sam-altman-believes-openai-has-been-on-the-wrong-side-of-history-concerning-open-source/) when it comes to open sourcing its technologies. He and his lieutenants say they may release code under open licenses more liberally going forward.
 
-- **Kinda makes you wonder why OpenAI** put "open" in its name to begin with, no? It's almost as if "open" was always a misnomer for a company that in fact is focused on building proprietary stuff -- the opposite of open source -- in a naked attempt to monopolize AI as a product much as search and social were monopolized in earlier eras.
+- **It's enough to make you wonder** why OpenAI ever put "open" in its name to begin with, no? It's almost as if "open" was always a misnomer for a company that is in fact more focused on building proprietary stuff -- the opposite of open source. One might even get the impression this was always a naked attempt to monopolize AI as a product much as search and social were monopolized in earlier eras. Hmmm...
 
 - **As part of a deal to secure a $1.4 billion loan** from the International Monetary Fund, El Salvador amended its pro-bitcoin law. El Salvador still officially considers the token to be legal tender, but it eliminated many of the practical elements that designation generally carries around the world. Under the amended law, El Salvador no longer considers bitcoin to be "currency," its adoption by merchants is optional, and the state will no longer accept bitcoin as payment for taxes and debts. ([Gizmodo](https://gizmodo.com/el-salvador-backs-away-from-its-bitcoin-experiment-2000559077))
 
-- Trivago acquisition gives them new on-chain capabilities ([CoinDesk](https://www.coindesk.com/business/2025/02/04/trivago-adds-travala-s-hotel-inventory-gaining-crypto-payment-options))
+- **Trivago unveiled a partnership with Travala,** a Singapore-based travel site that accepts crypto payments. ([CoinDesk](https://www.coindesk.com/business/2025/02/04/trivago-adds-travala-s-hotel-inventory-gaining-crypto-payment-options))
 
 ### Odds & Ends
 
