--- a/2025/2025-02-16-wir.md
+++ b/2025/2025-02-16-wir.md
@@ -1,7 +1,7 @@
 # OK, let's hear them out...
 ## Recent tech-related opinion and analysis from around the web.
 
-![Singapore's Speakers' Park](https://upload.wikimedia.org/wikipedia/commons/3/35/Speakers%27_Corner%2C_Singapore_20220218_081547.jpg)
+![Singapore's Speakers' Park](//upload.wikimedia.org/wikipedia/commons/3/35/Speakers%27_Corner%2C_Singapore_20220218_081547.jpg)
 *Speakers' Corner at Hong Lim Park in Singapore. Cropped photo by ZKang123 via Wikimedia Commons under [Creative Commons license](https://creativecommons.org/licenses/by-sa/4.0/)*
 
 *<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help make it possible for w3w to bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free tier as well, to make this info available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
@@ -18,7 +18,7 @@ In that vain -- and for a change of pace around here -- a couple of articles tha
 
 - **U.S. Sen. Kirsten Gillibrand** took to CoinDesk's pages to [tout the GENIUS Act](https://www.coindesk.com/opinion/2025/02/10/why-we-need-a-bipartisan-stablecoin-bill), a stablecoin bill that the New York Democrat recently co-sponsored. The proposal lays out a framework for stablecoin regulation in America -- obviously an important issue for crypto investors. Plus it's interesting to read Gillibrand's arguments as a possible signal of the changing politics around crypto in Washington. Perhaps national Democrats, who took a drubbing on crypto issues in November's election, are getting more assertive about carving out space for themselves with voters who care about such stuff.
 
-- **Investment manager Jan van Eck,** whose company offers a popular exchange-traded funds on bitcoin, offered his ideas for protecting crypto investors in a [Washington Post op-ed](https://news.google.com/read/CBMijgFBVV95cUxPcnFWaGt3bmh5dk1JcEdKWTBtaEZJZm9XN1JiNnFnSHZEM1BsazZCRFZWSVgzXzZDOU4wOGktVkdaUFlzRmhWYUhweGFuMVlBY194Z0hsRllJMXV1V0ljcnhWcU9vOXhfR0NRQ1l0QUE2OU1qN0tIWE9DcWhOYk56QjNQaFY1MzdKaUVpSDBB?hl=en-US&gl=US&ceid=US%3Aen).
+- **Investment manager Jan van Eck,** whose company offers a popular exchange-traded fund on bitcoin, offered his ideas for protecting crypto investors in a [Washington Post op-ed](https://news.google.com/read/CBMijgFBVV95cUxPcnFWaGt3bmh5dk1JcEdKWTBtaEZJZm9XN1JiNnFnSHZEM1BsazZCRFZWSVgzXzZDOU4wOGktVkdaUFlzRmhWYUhweGFuMVlBY194Z0hsRllJMXV1V0ljcnhWcU9vOXhfR0NRQ1l0QUE2OU1qN0tIWE9DcWhOYk56QjNQaFY1MzdKaUVpSDBB?hl=en-US&gl=US&ceid=US%3Aen).
 
 - **Count Salomon Brothers CEO Chip Daniels** in favor of President Trump's proposal to create a U.S. strategic reserve of digital assets. ([CoinDesk](https://www.coindesk.com/opinion/2025/02/10/why-trump-is-right-on-a-digital-currency-reserve))  
 
