--- a/2025/2025-02-16-wir.md
+++ b/2025/2025-02-16-wir.md
@@ -1,7 +1,7 @@
 # OK, let's hear them out...
 ## Recent tech-related opinion and analysis from around the web.
 
-![Singapore's Speakers' Park](//upload.wikimedia.org/wikipedia/commons/3/35/Speakers%27_Corner%2C_Singapore_20220218_081547.jpg)
+![Singapore's Speakers' Park](https://upload.wikimedia.org/wikipedia/commons/3/35/Speakers%27_Corner%2C_Singapore_20220218_081547.jpg)
 *Speakers' Corner at Hong Lim Park in Singapore. Cropped photo by ZKang123 via Wikimedia Commons under [Creative Commons license](https://creativecommons.org/licenses/by-sa/4.0/)*
 
 *<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help make it possible for w3w to bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free tier as well, to make this info available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
