Edits to early, early draft for 23 Feb

--- a/2025/2025-02-23-wir.md
+++ b/2025/2025-02-23-wir.md
@@ -5,59 +5,54 @@
 
 *Photo by CHUTTERSNAP via Unsplash*
 
-*<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help make it possible for w3w to bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free tier as well, to make this info available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
+*<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
 
 <hr>
 
-<!-- 100-word lead item...
+**TKTK.** tktk.
 
-Some string leftover from last week that may be useful:
+<!-- 150-word lead item. Some possibilities:
 
-**Some poking around on Google News quickly confirmed for me** that the mainstream tech press has been seriously undercovering
+- PESO: Milei controversey around promoting a shitcoin unfortunately distracts from the importance of Argentina as a bitcoin use case. We're no longer talking about the insanity around their peso.
 
-The mainstream tech press is an extension of the business press. Hence they tend to interpret the news through the frame of who's making the most money off a technology at scale.
+- DRIFT: Chaos of the Trump admin is quickly overtaking Bitcoin Strategic Reserve, it seems. Some great quotes on this from both anchor Sonali Basak and BitGet CEO Gracy Chen in 2/18 edition of Bloomberg Crypto. Link TK.
 
-There's certainly a lot of merit to that approach, of course. Understandably, a lot of readers and viewers are keenly interested in it as well. But it also has blind spots. These include:
-
-- **Important technical breakthroughs that haven't yet been commercialized.**
-
-- Innovation done outside companies, either in universities or self-organizing open source communities. This is how we got things like the worldwide web, tk, and tk.
-
-
-**Become a paid subscriber to w3w.** The newsletter offers several paid options, each with extra perks compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and chat features. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack/subscribe) ☯️ 😉  
-**Since Americans barely trust one another anymore,** especially on anything related to government policy, perhaps a trusted friend's opinions should carry increased value.
-*“We don't yet know what the Trump administration is going to propose in terms of reforms on crypto regulation,” Bailey said, according to a transcript of a Q&A session following his speech provided by the BoE press office. <strong>“I think that the Biden administration, my impression is particularly the SEC, had got into a situation where it couldn't get a regulatory framework and was using action through the courts. And that was becoming more challenging, frankly. So there is a gap there in terms of having a consistent regulatory framework,</strong> but we don't know what that's going to be.”*
-
-Musk, Kanye were largely radicalized on social. (Abuse of various drugs and being surrounded offline by sycophants and hangers-on in their everyday lives also probably doesn't help.)
-
-
+- TK: Another option...
 
 -->
-
-<!--
-
-- Digital media: Lee Enterprises suffers cyberattack: https://news.google.com/read/CBMilwFBVV95cUxNdHRJRmRZU0EtcFB0MWNqTElXeVdrYTRkN3JyVXZVTlhoNTBvZmZHWFF1RGVNS3J0eWJEczRlM2E1WkZ6RmlLVzRMSU1aU2NYYUFkaTRRdGpHbS1kdTA0Ym51UGpvVlk4VDkxZWtnd01ZZkNRWG1EYmM0VGJtVGRoZnRfZ0dUNFVETFN2RC0zUnJ3TDVMaVFr?hl=en-US&gl=US&ceid=US%3Aen | Re-making BuzzFeed: https://slate.com/technology/2025/02/buzzfeed-social-media-network-island-ai-jonah-peretti.html |
-
-
-
--->
-
-
 
 ### Week in Review: Feb. 16-22, 2025
+
+- **Argentina’s President Javier Milei** is in legal and legislative hot water, potentially facing impeachment for his role in an apparent crypto “rug pull” last weekend. Yikes. ([Associated Press](https://apnews.com/article/argentina-milei-cryptocurrency-fraud-charges-3f572a5f294d7c25437a08151798b917))
+
+- **A real head scratcher:** Stablecoin issuer Tether made an unsolicited $1 billion bid to increase its ownership stake from 19% to 50% in... an agrigusiness company? ([CoinDesk](https://www.coindesk.com/business/2025/02/18/tether-makes-unsolicited-offer-for-buying-majority-stake-in-agrodeco))
 
 - 4-part coindesk series on bitcoin in El Salvador. https://www.coindesk.com/coindesk-news/2025/02/14/el-salvador-dispatch-how-bitcoin-taught-a-nation-to-dream
 
 - https://www.washingtonpost.com/opinions/2025/02/10/ev-chargers-government-infrastructure/
 
-### Community
+- Mexico is threatening to sue over Google Maps' decision to re-label the body of water on its northeastern coast as the "Gulf of America." (<!-- Link TK-->)
+
+<!-- Other candidates...
+
+- Update on Lee Enterprises cyberattack: https://news.google.com/read/CBMilwFBVV95cUxNdHRJRmRZU0EtcFB0MWNqTElXeVdrYTRkN3JyVXZVTlhoNTBvZmZHWFF1RGVNS3J0eWJEczRlM2E1WkZ6RmlLVzRMSU1aU2NYYUFkaTRRdGpHbS1kdTA0Ym51UGpvVlk4VDkxZWtnd01ZZkNRWG1EYmM0VGJtVGRoZnRfZ0dUNFVETFN2RC0zUnJ3TDVMaVFr?hl=en-US&gl=US&ceid=US%3Aen
+
+- ICYMI BuzzFeed has a new transormation plan: https://slate.com/technology/2025/02/buzzfeed-social-media-network-island-ai-jonah-peretti.html
+https://apnews.com/article/argentina-milei-cryptocurrency-fraud-charges-3f572a5f294d7c25437a08151798b917
 
 - https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
 
-- ["The Substack invasion"](https://www.salon.com/2025/02/02/the-substack-invasion-when-the-tech-bros-came-for-journalism-everything-changed/) of journalism | <!-- Maybe add in Star-Ledger news re: closing of Newark's print edition is a good time to talk journalism innovation. -->
+-->
+
+### Community
+
+- tk
+- tk
 
 ### Odds & Ends
-- tk
+
+- New Brooklyn apartment tower will create new energy efficiency standars. <!-- Link TK. Bloomberg (and others?) have covered -->
+
 - tk
 
 _**That's it for now. Thanks for reading the newsletter today!**_
