Fleshing out 23 Feb draft

--- a/2025/2025-02-23-wir.md
+++ b/2025/2025-02-23-wir.md
@@ -1,59 +1,88 @@
-# tktk
-## tktk
+# TKTKTKTKT
+## TKTKTKTK
 
-![Broken dishes](https://w3w.news/img/chuttersnap-5000.jpg)
+![Physical ether tokens](https://w3w.news/img/kanchanara-unsplash-1920.jpg)
 
-*Photo by CHUTTERSNAP via Unsplash*
+<!-- Link to original photo in the Wikimedia database, including metadata: https://commons.wikimedia.org/wiki/File:Javier_Milei_VIVA_24_(3).jpg -->
+
+*Photo by Kanchanara via Unsplash*
 
 *<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
 
 <hr>
 
-**TKTK.** tktk.
+**Call me Ishmael.** Yadda yadda yadda.
 
-<!-- 150-word lead item. Some possibilities:
+<!-- 150-word riff on Ethereum's woes vs Solana. -->
 
-- PESO: Milei controversey around promoting a shitcoin unfortunately distracts from the importance of Argentina as a bitcoin use case. We're no longer talking about the insanity around their peso.
+- Ethereum transaction fees hit their lowest level since 2020: https://www.theblock.co/post/341625/ethereum-transaction-fees-plummet-70-hitting-lowest-levels-since-2020
 
-- DRIFT: Chaos of the Trump admin is quickly overtaking Bitcoin Strategic Reserve, it seems. Some great quotes on this from both anchor Sonali Basak and BitGet CEO Gracy Chen in 2/18 edition of Bloomberg Crypto. Link TK.
+- Buterin: https://www.coindesk.com/tech/2025/02/20/vitalik-buterin-disappointed-with-lack-of-embrace-for-blockchain-casinos
 
-- TK: Another option...
+- New tools for cross-chain transactions: https://www.coindesk.com/tech/2025/02/18/ethereum-developers-release-new-initiative-to-simplify-cross-chain-transactions
 
--->
+- New ether ETF: https://cryptoslate.com/franklin-templeton-bitcoin-ethereum-etf-begins-trading-in-the-us/
+
+- Bybit hack hurt ETH price: https://decrypt.co/307215/ethereum-bitcoin-fall-bybit-confirms-hack
+
+- **The crypto exchange Bybit** suffered a $1.5 billion hack, instantly ranking as one of the worst ever recorded. ([CNBC](https://www.cnbc.com/2025/02/21/hackers-steal-1point5-billion-from-exchange-bybit-biggest-crypto-heist.html))
 
 ### Week in Review: Feb. 16-22, 2025
 
-- **Argentina’s President Javier Milei** is in legal and legislative hot water, potentially facing impeachment for his role in an apparent crypto “rug pull” last weekend. Yikes. ([Associated Press](https://apnews.com/article/argentina-milei-cryptocurrency-fraud-charges-3f572a5f294d7c25437a08151798b917))
+- **Microsoft claims** it has created a new state of matter to power quantum computers. ([New York Times](https://news.google.com/read/CBMinAFBVV95cUxOaGt0SnZsV0hkaGo2blNYcVRJZVlTbXdpLTA2NUIzd3ltN0hGbGlPa3pLX1ozY0xPNmJSVHVrR09rM1NKYkhVU3R3UzlJbE1HUU9Gdi1IRUhqV0w0Nm1EYm9Ob3Ywd3UtY0MwNWpMUjYxdFFLeHRfQVd6dkJ6X2xmZlVVNGM0LTFUdnJ5X3hkenQzRTE2UzQtZFNQTDM?hl=en-US&gl=US&ceid=US%3Aen))
+
+- **The U.S. Securities and Exchange Commission** (SEC) announced it will replace its crypto enforcement team with a streamlined unit dedicated to fighting multiple forms of online financial fraud. ([Bloomberg](https://finance.yahoo.com/news/sec-replaces-crypto-enforcement-team-153331919.html))
+
+- **Coinbase said Friday** that the SEC has agreed to drop a lawsuit alleging that the crypto exchange offers unregistered securities. If the regulatory agency's appointed board approves such a settlement, it could provide a boost to the broader crypto industry. ([New York Times](https://news.google.com/read/CBMie0FVX3lxTE1PNEpHMTRSZE5XRFlFOFA1bElpLVJMdzB4aFJoSmlFSnBzZ0VPUmdIZDdNQ3ZUSmFKQVR0bFc0aVpZeXJvZGJRRVNLdDRXZC14RWstelFubkt5SnFSWVBiRkloTUdQeWlmUV9Tc3IxVmpfMFFZbHFWMk45MA?hl=en-US&gl=US&ceid=US%3Aen))
+
+- **Argentina’s President Javier Milei has become embroiled** in legal and legislative crisis -- including potential impeachment -- due to his role in an apparent memecoin “rug pull” last weekend. Yikes. ([Associated Press](https://apnews.com/article/argentina-milei-cryptocurrency-fraud-charges-3f572a5f294d7c25437a08151798b917))
+
+- **Johannesburg-based Altvest Capital** became the first listed company in Africa to add bitcoin to its corporate treasury. ([CoinDesk](https://www.coindesk.com/business/2025/02/21/bitcoin-treasury-bandwagon-reaches-africa-as-altvest-jumps-on-board))
+
+- **BlackRock's U.S.-listed bitcoin fund** has surpassed 50% market share in a crowded field of exchange-traded bitcoin offerings since early last year. ([TradingView](https://www.tradingview.com/news/cointelegraph:e9b811344094b:0-blackrock-bitcoin-etf-surpasses-50-market-share-despite-3-day-sell-off/))
 
 - **A real head scratcher:** Stablecoin issuer Tether made an unsolicited $1 billion bid to increase its ownership stake from 19% to 50% in... an agrigusiness company? ([CoinDesk](https://www.coindesk.com/business/2025/02/18/tether-makes-unsolicited-offer-for-buying-majority-stake-in-agrodeco))
+
+- **YouTube marked its 20th anniversary.** The popular service democratized online video long before Instagram and TikTok. Compared to those competitors, YouTube has also quietly seen greater adoption in users' livingrooms, where it arguably poses a greater threat to traditional TV and cable. Viewers worldwide now stream more than a billion hours of YouTube content per day on their TV screens, the company says. ([Salon](https://www.salon.com/2025/02/18/youtube-at-20-the-video-platform-transformed-screen-entertainment-now-it-could-change-a-lot-more/))
+
+<!--
+
+- WSJ's Weil on Coinbase's balance sheet: https://www.wsj.com/finance/currencies/coinbase-crypto-ownership-accounting-7c97b26a?st=oZ3Uue&reflink=desktopwebshare_permalink
+
+- Fortune reports Musk is raising a new funding round for Twitter at a $44 billion valuation -- the same price he paid for it. That's a farcial valuation.
+
+- Czech central banker likes bitcoin: https://www.coindesk.com/markets/2025/02/19/bitcoin-not-to-be-lumped-together-with-crypto-czech-central-bank-chief-michl
+
+- Catizen's success could help web3 gaming in general: https://www.coindesk.com/sponsored-content/has-success-finally-found-web3-gaming-catizen-s-growth-and-financial-results-offer-a-clear-affirmation
+
+- Senate Banking hearing on crypto regulation next week: https://www.coindesk.com/policy/2025/02/21/u-s-senate-banking-committee-sets-hearing-on-crypto-legislation-next-week
+
+- Chainalysis data on U.S.-sanctioned countries using crypto: https://www.coindesk.com/policy/2025/02/19/u-s-sanctioned-countries-such-as-iran-leaning-heavily-into-crypto-chainalysis
+
+- Palantir stock hit, possible weak outlook: https://www.cnbc.com/2025/02/19/palantir-shares-pentagon-cuts-trump.html
 
 - 4-part coindesk series on bitcoin in El Salvador. https://www.coindesk.com/coindesk-news/2025/02/14/el-salvador-dispatch-how-bitcoin-taught-a-nation-to-dream
 
 - https://www.washingtonpost.com/opinions/2025/02/10/ev-chargers-government-infrastructure/
 
-- Mexico is threatening to sue over Google Maps' decision to re-label the body of water on its northeastern coast as the "Gulf of America." (<!-- Link TK-->)
+- Korea is building a new AI data center with self-hosted power generation. https://www.wsj.com/tech/ai/ai-data-center-with-up-to-3-gigawatts-of-power-is-envisioned-for-south-korea-5141bd77
 
-<!-- Other candidates...
+- Mexico is threatening to sue over Google Maps' decision to re-label the body of water on its northeastern coast as the "Gulf of America." (<!-- Link TK
 
 - Update on Lee Enterprises cyberattack: https://news.google.com/read/CBMilwFBVV95cUxNdHRJRmRZU0EtcFB0MWNqTElXeVdrYTRkN3JyVXZVTlhoNTBvZmZHWFF1RGVNS3J0eWJEczRlM2E1WkZ6RmlLVzRMSU1aU2NYYUFkaTRRdGpHbS1kdTA0Ym51UGpvVlk4VDkxZWtnd01ZZkNRWG1EYmM0VGJtVGRoZnRfZ0dUNFVETFN2RC0zUnJ3TDVMaVFr?hl=en-US&gl=US&ceid=US%3Aen
 
-- ICYMI BuzzFeed has a new transormation plan: https://slate.com/technology/2025/02/buzzfeed-social-media-network-island-ai-jonah-peretti.html
+- ICYMI BuzzFeed has a new transformation plan: https://slate.com/technology/2025/02/buzzfeed-social-media-network-island-ai-jonah-peretti.html
 https://apnews.com/article/argentina-milei-cryptocurrency-fraud-charges-3f572a5f294d7c25437a08151798b917
 
 - https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
 
 -->
 
-### Community
-
-- tk
-- tk
-
 ### Odds & Ends
 
-- New Brooklyn apartment tower will create new energy efficiency standars. <!-- Link TK. Bloomberg (and others?) have covered -->
+- **Amazon MGM announced** it has reached an agreement to [take creative control](https://www.yahoo.com/entertainment/amazon-mgm-takes-creative-reins-144531572.html) of the James Bond film franchise, ending decades of family control. The deal appears to close out a feud that the Wall Street Journal [reported](https://www.wsj.com/business/media/james-bond-movies-amazon-barbara-broccoli-0b04f0db?st=jth3B4&reflink=desktopwebshare_permalink) in December between Amazon and Barbara Broccoli, whose father produced Bond movies going back to 1962's Dr. No.
 
-- tk
+- **Yay?** NASA downgraded to 0.28% the chance that an asteroid it has been monitoring will hit the earth. But the chance of it hitting the moon has risen to 1%. ([USA Today](https://www.usatoday.com/story/news/nation/2025/02/21/nasa-odds-2024-yr4-asteroid-city-killer/79333551007/))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
