Final draft for 23 Feb

--- a/2025/2025-03-02-wir.md
+++ b/2025/2025-03-02-wir.md
@@ -23,6 +23,55 @@
 
 ### Week in Review: Feb. 23 to March 1, 2025
 
+<!--
+
+Some leftovers from last week...
+
+| Bybit hack hurt ETH price: https://decrypt.co/307215/ethereum-bitcoin-fall-bybit-confirms-hack
+
+- Ethereum transaction fees hit their lowest level since 2020: https://www.theblock.co/post/341625/ethereum-transaction-fees-plummet-70-hitting-lowest-levels-since-2020
+
+- New tools for cross-chain transactions: https://www.coindesk.com/tech/2025/02/18/ethereum-developers-release-new-initiative-to-simplify-cross-chain-transactions
+
+- New ether ETF: https://cryptoslate.com/franklin-templeton-bitcoin-ethereum-etf-begins-trading-in-the-us/
+
+-->
+
+<!--
+
+- WSJ's Weil on Coinbase's balance sheet: https://www.wsj.com/finance/currencies/coinbase-crypto-ownership-accounting-7c97b26a?st=oZ3Uue&reflink=desktopwebshare_permalink
+
+- Fortune reports Musk is raising a new funding round for Twitter at a $44 billion valuation -- the same price he paid for it. That's a farcial valuation.
+
+- Czech central banker likes bitcoin: https://www.coindesk.com/markets/2025/02/19/bitcoin-not-to-be-lumped-together-with-crypto-czech-central-bank-chief-michl
+
+- Catizen's success could help web3 gaming in general: https://www.coindesk.com/sponsored-content/has-success-finally-found-web3-gaming-catizen-s-growth-and-financial-results-offer-a-clear-affirmation
+
+- Senate Banking hearing on crypto regulation next week: https://www.coindesk.com/policy/2025/02/21/u-s-senate-banking-committee-sets-hearing-on-crypto-legislation-next-week
+
+- Chainalysis data on U.S.-sanctioned countries using crypto: https://www.coindesk.com/policy/2025/02/19/u-s-sanctioned-countries-such-as-iran-leaning-heavily-into-crypto-chainalysis
+
+- Palantir stock hit, possible weak outlook: https://www.cnbc.com/2025/02/19/palantir-shares-pentagon-cuts-trump.html
+
+- 4-part coindesk series on bitcoin in El Salvador. https://www.coindesk.com/coindesk-news/2025/02/14/el-salvador-dispatch-how-bitcoin-taught-a-nation-to-dream
+
+- https://www.washingtonpost.com/opinions/2025/02/10/ev-chargers-government-infrastructure/
+
+- Korea is building a new AI data center with self-hosted power generation. https://www.wsj.com/tech/ai/ai-data-center-with-up-to-3-gigawatts-of-power-is-envisioned-for-south-korea-5141bd77
+
+- Mexico is threatening to sue over Google Maps' decision to re-label the body of water on its northeastern coast as the "Gulf of America." (<!-- Link TK
+
+- Update on Lee Enterprises cyberattack: https://news.google.com/read/CBMilwFBVV95cUxNdHRJRmRZU0EtcFB0MWNqTElXeVdrYTRkN3JyVXZVTlhoNTBvZmZHWFF1RGVNS3J0eWJEczRlM2E1WkZ6RmlLVzRMSU1aU2NYYUFkaTRRdGpHbS1kdTA0Ym51UGpvVlk4VDkxZWtnd01ZZkNRWG1EYmM0VGJtVGRoZnRfZ0dUNFVETFN2RC0zUnJ3TDVMaVFr?hl=en-US&gl=US&ceid=US%3Aen
+
+- ICYMI BuzzFeed has a new transformation plan: https://slate.com/technology/2025/02/buzzfeed-social-media-network-island-ai-jonah-peretti.html
+https://apnews.com/article/argentina-milei-cryptocurrency-fraud-charges-3f572a5f294d7c25437a08151798b917
+
+- https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
+
+-->
+
+
+
 - tk
 - tk
 - tk
