--- a/2025/2025-02-23-wir.md
+++ b/2025/2025-02-23-wir.md
@@ -1,82 +1,53 @@
-# TKTKTKTKT
-## TKTKTKTK
+# A twist in the Ethereum-Solana battle
+## What if Vitalik is right about crypto "casinos"?
 
-![Physical ether tokens](https://w3w.news/img/kanchanara-unsplash-1920.jpg)
+![Physical ether tokens](https://w3w.news/img/vitalik1920.jpg)
 
 <!-- Link to original photo in the Wikimedia database, including metadata: https://commons.wikimedia.org/wiki/File:Javier_Milei_VIVA_24_(3).jpg -->
 
-*Photo by Kanchanara via Unsplash*
+*Ethereum creator Vitalik Buterin. File photo by TechCrunch via Wikimedia Commons under Creative Commons license*
 
 *<strong>Before we begin,</strong> a big thank-you to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech. I'm glad to maintain a free distribution tier as well, to make this information available more widely. But if you're able, please do consider upgrading to a paid plan [on Substack](https://w3wnews.substack.com/subscribe).* 😊
 
 <hr>
 
-**Call me Ishmael.** Yadda yadda yadda.
+**Ethereum's founder is pushing back against the narrative** that the decentralized app platform is falling behind competitors like Solana. That might not be as crazy as it sounds.
 
-<!-- 150-word riff on Ethereum's woes vs Solana. -->
+CoinDesk's Margaux Nijkerk [reports](https://www.coindesk.com/tech/2025/02/20/vitalik-buterin-disappointed-with-lack-of-embrace-for-blockchain-casinos):
 
-- Ethereum transaction fees hit their lowest level since 2020: https://www.theblock.co/post/341625/ethereum-transaction-fees-plummet-70-hitting-lowest-levels-since-2020
+<blockquote><em>
+<p>Ethereum co-founder Vitalik Buterin expressed his disappointment with some ETH community members and thought it was “bad” that the ecosystem was too welcoming for “casinos.”</p>
 
-- Buterin: https://www.coindesk.com/tech/2025/02/20/vitalik-buterin-disappointed-with-lack-of-embrace-for-blockchain-casinos
+<p>During an ask-me-anything (AMA) on Tako, Buterin responded to a question about whether he had felt disappointed at the Ethereum Foundation, the crypto industry or the community. He answered “of course,” especially when others question why Ethereum has not been more open to applications with blockchain gambling, seemingly taking a jab at its competitor, Solana, and how their ecosystem has embraced a lot of memecoin activity over the past year.</p>
+</em></blockquote>
 
-- New tools for cross-chain transactions: https://www.coindesk.com/tech/2025/02/18/ethereum-developers-release-new-initiative-to-simplify-cross-chain-transactions
+**Why it matters:** Since the meltdown of FTX in November 2022 -- a pivotal event for the entire crypto industry -- Solana's network activity and valuation have exploded, easily outpacing Ethereum's growth. The ether token's market capitalization of $378 billion is now "just" four times that of Solana, compared to six times greater pre-FTX, according to [CoinMarketCap](https://coinmarketcap.com/) data.
 
-- New ether ETF: https://cryptoslate.com/franklin-templeton-bitcoin-ethereum-etf-begins-trading-in-the-us/
+Hence there has been anxiety -- and occasional recrimination -- in the Ethereum community lately about the direction of the platform.
 
-- Bybit hack hurt ETH price: https://decrypt.co/307215/ethereum-bitcoin-fall-bybit-confirms-hack
+But beyond the raw numbers, Buterin raises some points worth considering about *how* exactly the broader web3 ecosystem has reached its new status quo and what role Ethereum should play in the future.
 
-- **The crypto exchange Bybit** suffered a $1.5 billion hack, instantly ranking as one of the worst ever recorded. ([CNBC](https://www.cnbc.com/2025/02/21/hackers-steal-1point5-billion-from-exchange-bybit-biggest-crypto-heist.html))
+Solana has certainly become the go-to platform lately for developers launching memecoins, which by definition [carry no intrinsic value](https://www.investopedia.com/meme-coin-6750312). That includes the Solana-based coins trading under the tickers TRUMP, MELANIA, and LIBRA that have recently sparked government corruption scandals in the [U.S.](https://www.cnn.com/2025/01/20/tech/meme-coins-donald-melania-trump-intl-hnk/index.html) and [Argentina](https://apnews.com/article/argentina-milei-cryptocurrency-fraud-charges-3f572a5f294d7c25437a08151798b917).
+
+If Buterin, who [leads the Ethereum Foundation](https://cointelegraph.com/news/buterin-announces-leadership-changes-ethereum-foundation), wants to cede such sketchy ground to Solana and focus instead on quality over quantity, that probably wouldn't be the worst thing for Ethereum long term.
 
 ### Week in Review: Feb. 16-22, 2025
 
 - **Microsoft claims** it has created a new state of matter to power quantum computers. ([New York Times](https://news.google.com/read/CBMinAFBVV95cUxOaGt0SnZsV0hkaGo2blNYcVRJZVlTbXdpLTA2NUIzd3ltN0hGbGlPa3pLX1ozY0xPNmJSVHVrR09rM1NKYkhVU3R3UzlJbE1HUU9Gdi1IRUhqV0w0Nm1EYm9Ob3Ywd3UtY0MwNWpMUjYxdFFLeHRfQVd6dkJ6X2xmZlVVNGM0LTFUdnJ5X3hkenQzRTE2UzQtZFNQTDM?hl=en-US&gl=US&ceid=US%3Aen))
 
+- **The crypto exchange Bybit** suffered a $1.5 billion hack, instantly ranking as one of the worst ever recorded. ([CNBC](https://www.cnbc.com/2025/02/21/hackers-steal-1point5-billion-from-exchange-bybit-biggest-crypto-heist.html))
+
 - **The U.S. Securities and Exchange Commission** (SEC) announced it will replace its crypto enforcement team with a streamlined unit dedicated to fighting multiple forms of online financial fraud. ([Bloomberg](https://finance.yahoo.com/news/sec-replaces-crypto-enforcement-team-153331919.html))
 
 - **Coinbase said Friday** that the SEC has agreed to drop a lawsuit alleging that the crypto exchange offers unregistered securities. If the regulatory agency's appointed board approves such a settlement, it could provide a boost to the broader crypto industry. ([New York Times](https://news.google.com/read/CBMie0FVX3lxTE1PNEpHMTRSZE5XRFlFOFA1bElpLVJMdzB4aFJoSmlFSnBzZ0VPUmdIZDdNQ3ZUSmFKQVR0bFc0aVpZeXJvZGJRRVNLdDRXZC14RWstelFubkt5SnFSWVBiRkloTUdQeWlmUV9Tc3IxVmpfMFFZbHFWMk45MA?hl=en-US&gl=US&ceid=US%3Aen))
 
-- **Argentina’s President Javier Milei has become embroiled** in legal and legislative crisis -- including potential impeachment -- due to his role in an apparent memecoin “rug pull” last weekend. Yikes. ([Associated Press](https://apnews.com/article/argentina-milei-cryptocurrency-fraud-charges-3f572a5f294d7c25437a08151798b917))
+- **BlackRock's U.S.-listed bitcoin fund** has surpassed 50% market share in a crowded field of exchange-traded bitcoin offerings since early last year. ([TradingView](https://www.tradingview.com/news/cointelegraph:e9b811344094b:0-blackrock-bitcoin-etf-surpasses-50-market-share-despite-3-day-sell-off/))
 
 - **Johannesburg-based Altvest Capital** became the first listed company in Africa to add bitcoin to its corporate treasury. ([CoinDesk](https://www.coindesk.com/business/2025/02/21/bitcoin-treasury-bandwagon-reaches-africa-as-altvest-jumps-on-board))
 
-- **BlackRock's U.S.-listed bitcoin fund** has surpassed 50% market share in a crowded field of exchange-traded bitcoin offerings since early last year. ([TradingView](https://www.tradingview.com/news/cointelegraph:e9b811344094b:0-blackrock-bitcoin-etf-surpasses-50-market-share-despite-3-day-sell-off/))
-
-- **A real head scratcher:** Stablecoin issuer Tether made an unsolicited $1 billion bid to increase its ownership stake from 19% to 50% in... an agrigusiness company? ([CoinDesk](https://www.coindesk.com/business/2025/02/18/tether-makes-unsolicited-offer-for-buying-majority-stake-in-agrodeco))
+- **A real head scratcher:** Stablecoin issuer Tether made an unsolicited $1 billion bid to increase its ownership stake from 19% to 50% in... an agribusiness company? ([CoinDesk](https://www.coindesk.com/business/2025/02/18/tether-makes-unsolicited-offer-for-buying-majority-stake-in-agrodeco))
 
 - **YouTube marked its 20th anniversary.** The popular service democratized online video long before Instagram and TikTok. Compared to those competitors, YouTube has also quietly seen greater adoption in users' livingrooms, where it arguably poses a greater threat to traditional TV and cable. Viewers worldwide now stream more than a billion hours of YouTube content per day on their TV screens, the company says. ([Salon](https://www.salon.com/2025/02/18/youtube-at-20-the-video-platform-transformed-screen-entertainment-now-it-could-change-a-lot-more/))
-
-<!--
-
-- WSJ's Weil on Coinbase's balance sheet: https://www.wsj.com/finance/currencies/coinbase-crypto-ownership-accounting-7c97b26a?st=oZ3Uue&reflink=desktopwebshare_permalink
-
-- Fortune reports Musk is raising a new funding round for Twitter at a $44 billion valuation -- the same price he paid for it. That's a farcial valuation.
-
-- Czech central banker likes bitcoin: https://www.coindesk.com/markets/2025/02/19/bitcoin-not-to-be-lumped-together-with-crypto-czech-central-bank-chief-michl
-
-- Catizen's success could help web3 gaming in general: https://www.coindesk.com/sponsored-content/has-success-finally-found-web3-gaming-catizen-s-growth-and-financial-results-offer-a-clear-affirmation
-
-- Senate Banking hearing on crypto regulation next week: https://www.coindesk.com/policy/2025/02/21/u-s-senate-banking-committee-sets-hearing-on-crypto-legislation-next-week
-
-- Chainalysis data on U.S.-sanctioned countries using crypto: https://www.coindesk.com/policy/2025/02/19/u-s-sanctioned-countries-such-as-iran-leaning-heavily-into-crypto-chainalysis
-
-- Palantir stock hit, possible weak outlook: https://www.cnbc.com/2025/02/19/palantir-shares-pentagon-cuts-trump.html
-
-- 4-part coindesk series on bitcoin in El Salvador. https://www.coindesk.com/coindesk-news/2025/02/14/el-salvador-dispatch-how-bitcoin-taught-a-nation-to-dream
-
-- https://www.washingtonpost.com/opinions/2025/02/10/ev-chargers-government-infrastructure/
-
-- Korea is building a new AI data center with self-hosted power generation. https://www.wsj.com/tech/ai/ai-data-center-with-up-to-3-gigawatts-of-power-is-envisioned-for-south-korea-5141bd77
-
-- Mexico is threatening to sue over Google Maps' decision to re-label the body of water on its northeastern coast as the "Gulf of America." (<!-- Link TK
-
-- Update on Lee Enterprises cyberattack: https://news.google.com/read/CBMilwFBVV95cUxNdHRJRmRZU0EtcFB0MWNqTElXeVdrYTRkN3JyVXZVTlhoNTBvZmZHWFF1RGVNS3J0eWJEczRlM2E1WkZ6RmlLVzRMSU1aU2NYYUFkaTRRdGpHbS1kdTA0Ym51UGpvVlk4VDkxZWtnd01ZZkNRWG1EYmM0VGJtVGRoZnRfZ0dUNFVETFN2RC0zUnJ3TDVMaVFr?hl=en-US&gl=US&ceid=US%3Aen
-
-- ICYMI BuzzFeed has a new transformation plan: https://slate.com/technology/2025/02/buzzfeed-social-media-network-island-ai-jonah-peretti.html
-https://apnews.com/article/argentina-milei-cryptocurrency-fraud-charges-3f572a5f294d7c25437a08151798b917
-
-- https://unpromptedthoughts.substack.com/p/yes-we-really-do-need-another-ai | Shout out Barry's new Substack + add to your Substack recommendations for new subscribers.
-
--->
 
 ### Odds & Ends
 
