--- a/2025/2025-02-23-wir.md
+++ b/2025/2025-02-23-wir.md
@@ -21,7 +21,7 @@ CoinDesk's Margaux Nijkerk [reports](https://www.coindesk.com/tech/2025/02/20/vi
 <p>During an ask-me-anything (AMA) on Tako, Buterin responded to a question about whether he had felt disappointed at the Ethereum Foundation, the crypto industry or the community. He answered “of course,” especially when others question why Ethereum has not been more open to applications with blockchain gambling, seemingly taking a jab at its competitor, Solana, and how their ecosystem has embraced a lot of memecoin activity over the past year.</p>
 </em></blockquote>
 
-**Why it matters:** Since the meltdown of FTX in November 2022 -- a pivotal event for the entire crypto industry -- Solana's network activity and valuation have exploded, easily outpacing Ethereum's growth. The ether token's market capitalization of $378 billion is now "just" four times that of Solana, compared to six times greater pre-FTX, according to [CoinMarketCap](https://coinmarketcap.com/) data.
+**Why it matters:** Since the meltdown of FTX in November 2022 -- a pivotal event for the entire crypto industry -- Solana's network activity and valuation have exploded, easily outpacing Ethereum's growth. The ether token's market capitalization of $378 billion is now "just" four times that of Solana, compared to six times greater prior to FTX's collapse, according to [CoinMarketCap](https://coinmarketcap.com/) data.
 
 Hence there has been anxiety -- and occasional recrimination -- in the Ethereum community lately about the direction of the platform.
 
@@ -47,13 +47,13 @@ If Buterin, who [leads the Ethereum Foundation](https://cointelegraph.com/news/b
 
 - **A real head scratcher:** Stablecoin issuer Tether made an unsolicited $1 billion bid to increase its ownership stake from 19% to 50% in... an agribusiness company? ([CoinDesk](https://www.coindesk.com/business/2025/02/18/tether-makes-unsolicited-offer-for-buying-majority-stake-in-agrodeco))
 
-- **YouTube marked its 20th anniversary.** The popular service democratized online video long before Instagram and TikTok. Compared to those competitors, YouTube has also quietly seen greater adoption in users' livingrooms, where it arguably poses a greater threat to traditional TV and cable. Viewers worldwide now stream more than a billion hours of YouTube content per day on their TV screens, the company says. ([Salon](https://www.salon.com/2025/02/18/youtube-at-20-the-video-platform-transformed-screen-entertainment-now-it-could-change-a-lot-more/))
+- **YouTube marked its 20th anniversary.** The popular service democratized online video long before Instagram and TikTok. Compared to those competitors, YouTube has also quietly seen greater adoption in users' livingrooms, where it arguably poses a greater threat to traditional TV and cable. ([Salon](https://www.salon.com/2025/02/18/youtube-at-20-the-video-platform-transformed-screen-entertainment-now-it-could-change-a-lot-more/))
 
 ### Odds & Ends
 
 - **Amazon MGM announced** it has reached an agreement to [take creative control](https://www.yahoo.com/entertainment/amazon-mgm-takes-creative-reins-144531572.html) of the James Bond film franchise, ending decades of family control. The deal appears to close out a feud that the Wall Street Journal [reported](https://www.wsj.com/business/media/james-bond-movies-amazon-barbara-broccoli-0b04f0db?st=jth3B4&reflink=desktopwebshare_permalink) in December between Amazon and Barbara Broccoli, whose father produced Bond movies going back to 1962's Dr. No.
 
-- **Yay?** NASA downgraded to 0.28% the chance that an asteroid it has been monitoring will hit the earth. But the chance of it hitting the moon has risen to 1%. ([USA Today](https://www.usatoday.com/story/news/nation/2025/02/21/nasa-odds-2024-yr4-asteroid-city-killer/79333551007/))
+- **Yay?** NASA downgraded to 0.28% the chance that an asteroid it has been monitoring will hit the earth. But its chance of hitting the moon has risen to 1%. ([USA Today](https://www.usatoday.com/story/news/nation/2025/02/21/nasa-odds-2024-yr4-asteroid-city-killer/79333551007/))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
